# cs_design

./: LICENSE  README.md  cs_design.yaml  pyproject.toml
src/bayes_design/: decode.py  model.py
src/bayes_design/experiments/: make_chimerax_scripts_old.py  scrmsd_experiment.py
src/cs_design/: decode.py  design.py  model.py
src/cs_design/experiments/: cath.py  make_chimerax_scripts.py
