[tool.poetry]
name = "cs_design"
version = "0.1.0"
description = "Protein design for conformational specificity"
authors = ["Jacob Stern"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jacobastern/cs_design"
repository = "https://github.com/jacobastern/cs_design"

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "==2.1.1"
biopython = "==1.81"
sentencepiece = "==0.2.0"
transformers = "==4.44.2"
tokenizers = "==0.19.1"
scipy = "==1.15.1"
accelerate = "==1.3.0"
pandas = "==2.2.3"

[tool.poetry.package]
include = [{ path = "src/bayes_design", format = "sdist" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"